--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
+    "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.0.0",
     "winston": "^3.3.3"
   },
