--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.5.0",
     "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.0.0",
+    "stripe": "^8.141.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
